--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@
 /* 40.0px/2.50rem */
 :root {
   --main_color: #0ca678;
+  --accent_color_bg: #d0e3f1;
+  --accent_color_bg_tint: #bbccd9;
+  --accent_color: #335e7c;
+  --link_color: #0a95ff;
+  --link_color_shade: #54b5ff;
   --gray_color: #adb5bd;
   --gray_color_more: #868e96;
   --background_grey_color: #e9ecef;
@@ -48,7 +53,7 @@ body {
   grid-template-rows: 3rem auto 10rem;
   grid-template-columns: 15rem auto 25rem;
   /* grid-gap: 1rem; */
-    row-gap: 2rem;
+  row-gap: 2rem;
 }
 /* ##################### */
 /* #####Navigation###### */
@@ -124,9 +129,9 @@ aside li {
 aside li:hover {
   cursor: pointer;
 }
-section{
-    border-left: 1px solid var(--gray_color);
-    padding-left: 1rem;
+section {
+  border-left: 1px solid var(--gray_color);
+  /* padding-left: 1rem; */
 }
 .active {
   background-color: var(--background_grey_color);
@@ -138,11 +143,13 @@ section{
   grid-template-rows: 2;
   grid-template-columns: 2;
   padding: 1rem 0;
+    border-bottom: 1px solid var(--gray_color);
 }
 .top_questions_title {
   font-size: 2rem;
   grid-row: 1;
   grid-column: 1;
+    padding-left: 1rem;
 }
 .ask_question {
   grid-row: 1;
@@ -152,7 +159,7 @@ section{
 }
 .ask_question a {
   text-decoration: none;
-    font-size: 0.9rem;
+  font-size: 0.9rem;
   color: white;
   background-color: var(--main_color);
   padding: 0.5rem 1rem;
@@ -189,55 +196,85 @@ section{
   background-color: var(--background_grey_color);
   color: black !important;
 }
-.blog_news_container{
-    margin: 2rem 1rem;
+.blog_news_container {
+  margin: 2rem 1rem;
 }
-article h1{
-    font-size: 1rem;
+article h1 {
+  font-size: 1rem;
 }
 /* ################# */
 /* ####Questions#### */
 /* ################# */
-.question{
-    display: grid;
-    grid-template-rows: repeat(2,1.5rem);
-    grid-template-columns: 10rem auto 15rem;
+.question {
+  display: grid;
+  grid-template-rows: 1rem;
+  grid-template-columns: 10rem auto 15rem;
+  grid-auto-rows: 1fr;
+    border-bottom: 1px solid var(--gray_color);
+    padding: 1rem 0;;
 }
-.question_left{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    font-size: 0.8rem;
-    width: 5rem;
-    align-items: end;
-    grid-column: 1;
-    grid-row: 1/2;
-    justify-self: end;
-    padding-right: 1rem;
+.question_left {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 0.75rem;
+  /* width: 5rem; */
+  align-items: end;
+  grid-column: 1;
+  grid-row: 1 / 3;
+  justify-self: end;
+  padding-right: 1rem;
 }
-.question_left .answers{
-    border: 1px solid var(--main_color);
-                padding: 0.4rem 0.4rem;
-    color: var(--main_color);
+.question_left .answers {
+  padding: 0.4rem 0.4rem;
+  color: white;
+  background-color: var(--main_color);
+  border-radius: 5px;
 }
-.question_left .views{
-    color: var(--gray_color);
+.question_left .views {
+  color: var(--gray_color);
 }
-.question_tags{
-    grid-row:2;
-    grid-column: 2;
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
+.question_tags {
+  grid-row: 2;
+  grid-column: 2;
+  align-self: center;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
 }
-.question_tag{
-    padding:0.5rem 0.5rem;
-    background-color: var(--main_color)
+.question_tag {
+  padding: 0.3rem 0.3rem;
+  background-color: var(--accent_color_bg);
+  color: var(--accent_color);
+  font-size: 0.75rem;
+  border-radius: 5px;
 }
-.author{
-    grid-column: 3;
-    grid-row: 2;
-    display: flex;
-    flex-direction: row; 
-    gap:1rem;
+.question_tag:hover{
+    background-color: var(--accent_color_bg_tint);
+    cursor: pointer;
+}
+.author {
+  grid-column: 3;
+  grid-row: 2;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+    font-size: 0.75rem;
+    align-self: center;
+}
+.author div:first-child{
+    color: var(--link_color);
+}
+.author div:first-child:hover{
+    color: var(--link_color_shade);
+    cursor: pointer;
+}
+.question_title {
+  grid-row: 1;
+  grid-column: 2;
+  color: var(--link_color);
+}
+.question_title:hover {
+    color:var(--link_color_shade);
+    cursor: pointer;
 }
