--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,6 @@ body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  display: grid;
-  grid-template-rows: 3rem auto 10rem;
-  grid-template-columns: 15rem auto 25rem;
-  /* grid-gap: 1rem; */
-  row-gap: 2rem;
 }
 /* ##################### */
 /* #####Navigation###### */
@@ -68,12 +63,12 @@ nav {
   display: flex;
   gap: 2rem;
   padding: 1rem 3rem;
-  height: 3rem;
+  height: 2rem;
   border-bottom: 1px solid var(--gray_color);
-  grid-row: 1;
-  grid-column: 1 /4;
   box-shadow: 0 5px 25px 5px var(--background_grey_color);
   background-color: var(--background_grey_color);
+  align-items: center;
+    justify-content: space-around;
 }
 .logo {
   font-size: 2rem;
@@ -82,13 +77,11 @@ nav {
   color: var(--gray_color);
   border: 1px solid var(--gray_color);
   border-radius: 0.2rem;
-  /* flex: 1; */
   flex-grow: 1;
-  /* min-width: 30rem; */
-  /* max-width: 60rem; */
   display: flex;
   align-items: center;
   background-color: white;
+  height: 3rem;
 }
 .user {
   display: flex;
@@ -109,38 +102,72 @@ nav {
   width: 2rem;
   height: 2rem;
 }
-.user-profile div {
-  font-weight: 700;
-}
 .user-profile div:nth-child(3) {
   color: var(--main_color);
 }
 .user svg {
-  color: var(--gray_color_more);
+  color: black;
   width: 2rem;
-  height: 2rem;
+  /* height: 2rem; */
 }
-aside {
-  grid-column: 1;
-  grid-row: 2;
-  height: 100vh;
+.user div {
+  align-self: center;
+  padding: 0.9rem 0;
 }
-aside ol {
+.user div:hover {
+  background-color: var(--gray_color_more);
+}
+.search_buttton {
+  display: none;
+}
+
+/* ##################### */
+/* ########main######### */
+/* ##################### */
+main {
+  display: flex;
+  flex-direction: row;
+}
+/* ##################### */
+/* #######aside######### */
+/* ##################### */
+.aside {
+  margin: 0;
+  /* padding-left: 2rem; */
+  width: 10rem;
+}
+.aside ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-left: 1rem;
 }
-aside li {
+.aside li {
+  padding: 1rem 0 1rem 1rem;
+  display: flex;
+  align-items: center;
+  color: var(--gray_color_more);
+  padding-left: 1rem;
+}
+.aside li:hover {
+  cursor: pointer;
+  color: black;
+}
+
+.aside div {
   padding: 1rem 0 1rem 1rem;
   display: flex;
   align-items: center;
   color: var(--gray_color_more);
 }
-aside li:hover {
+.aside div:hover {
   cursor: pointer;
 }
 section {
+  flex-grow: 1;
+  padding-right: 2rem;
   border-left: 1px solid var(--gray_color);
-  /* padding-left: 1rem; */
-    width: 100%;
+  margin-top: 1rem;
 }
 .active {
   background-color: var(--background_grey_color);
@@ -148,39 +175,31 @@ section {
   color: black;
 }
 .top_questions {
-  display: grid;
-  grid-template-rows: 2;
-  grid-template-columns: 2;
-  padding: 1rem 0;
   border-bottom: 1px solid var(--gray_color);
+}
+.top_questions_top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .top_questions_title {
   font-size: 2rem;
-  grid-row: 1;
-  grid-column: 1;
   padding-left: 1rem;
-  word-wrap: break-word;
-  word-break: break-all;
 }
-.ask_question {
-  grid-row: 1;
-  grid-column: 2;
-  margin: 1rem 0rem;
-  justify-self: end;
-}
-.ask_question a {
-  text-decoration: none;
-  font-size: 0.9rem;
+.ask_question button {
+  font-size: 1rem;
   color: white;
   background-color: var(--main_color);
-  padding: 0.5rem 1rem;
-  border-radius: 0.2rem;
+  padding: 1rem 1rem;
+  border-radius: 0.5rem;
+}
+.top_questions_bottom {
+  padding: 1rem 0;
+  display: flex;
+  justify-content: flex-end;
 }
 .top_questions_filter {
-  justify-self: end;
   display: flex;
-  grid-row: 2;
-  grid-column: 2;
 }
 .top_questions_filter div {
   color: var(--gray_color_more);
@@ -210,15 +229,14 @@ section {
 .blog_news_container {
   display: flex;
   flex-direction: column;
-  margin: 1.5rem 1rem;
 }
 .blog_news_header {
   color: var(black);
   background-color: var(--triadic_color_1_shade);
   font-size: 1rem;
   padding: 1rem;
-  border-top-right-radius: 1rem;
-  border-top-left-radius: 1rem;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
   font-weight: 700;
 }
 .blog_news {
@@ -234,13 +252,15 @@ section {
 /* ####Questions#### */
 /* ################# */
 .question {
-  display: grid;
-  grid-auto-rows: minmax(10rem, auto);
-  /* grid-template-rows: 1rem; */
-  grid-template-columns: 10rem auto 15rem;
-  grid-auto-rows: 1fr;
+  display: flex;
   border-bottom: 1px solid var(--gray_color);
-  padding: 1rem 0;
+  padding: 1rem 1rem;
+}
+.question_body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
 }
 .question_left {
   display: flex;
@@ -249,9 +269,6 @@ section {
   font-size: 0.75rem;
   /* width: 5rem; */
   align-items: end;
-  grid-column: 1;
-  grid-row: 1 / 3;
-  justify-self: end;
   padding-right: 1rem;
 }
 .question_left .answers {
@@ -264,9 +281,6 @@ section {
   color: var(--gray_color);
 }
 .question_tags {
-  grid-row: 2;
-  grid-column: 2;
-  align-self: center;
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
@@ -283,13 +297,11 @@ section {
   cursor: pointer;
 }
 .author {
-  grid-column: 3;
-  grid-row: 2;
+  align-self: flex-end;
   display: flex;
   flex-direction: row;
   gap: 1rem;
   font-size: 0.75rem;
-  align-self: center;
 }
 .author div:first-child {
   color: var(--link_color);
@@ -308,21 +320,44 @@ section {
   color: var(--link_color_shade);
   cursor: pointer;
 }
-footer{
-    grid-row: 3;
-    grid-column: 1 / 4;
+article {
+  margin-top: 2rem;
+  margin-right: 2rem;
+}
+footer {
+  grid-row: 3;
+  grid-column: 1 / 4;
 }
 
 /* ################# */
 /* ##Media Quesries## */
 /* ################# */
-@media (max-width: 1230px)
-{
-    body{
-        grid-template-columns: 15rem auto !important;
+@media (max-width: 980px) {
+  article {
+    display: none;
+  }
+}
+@media (max-width: 640px) {
+  article {
+    display: none;
+  }
+  .aside {
+    display: none;
+  }
+  .search_buttton {
+    display: block;
+  }
+  .search {
+    display: none;
+  }
+    nav{
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
     }
-    article{
-        display: none;
+    .ask_question button{
+        padding: 0.5rem 0.5rem;
     }
-
+    .top_questions_title{
+        font-size: 1.5rem;
+    }
 }
